<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vRootFilterDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_opacity">

    <LinearLayout
        android:id="@+id/vFilterDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_white_radius_10_border_gray_eb"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">


        <com.xuanlocle.weatherapp.widget.TextViewEx
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_filter_dialog_count_title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/npCount"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small" />

        <com.xuanlocle.weatherapp.widget.TextViewEx
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/weather_filter_dialog_unit_title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal">

            <com.xuanlocle.weatherapp.widget.TextViewEx
                android:id="@+id/tvUnitKelvin"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/weather_filter_dialog_unit_kelvin" />

            <com.xuanlocle.weatherapp.widget.TextViewEx
                android:id="@+id/tvUnitCelcius"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/weather_filter_dialog_unit_celsius" />

            <com.xuanlocle.weatherapp.widget.TextViewEx
                android:id="@+id/tvUnitFahrenheit"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weather_filter_dialog_unit_fahrenheit" />
        </LinearLayout>

    </LinearLayout>

    <com.xuanlocle.weatherapp.widget.TextViewEx
        android:id="@+id/tvSaveFilter"
        style="@style/ButtonStyle.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/general_action_save" />
</RelativeLayout>